tests/trybuild/stages/flush_missing_comma.stderr
error: no rules expected the token `flush`
 --> tests/trybuild/stages/flush_missing_comma.rs:5:5
  |
5 |     flush
  |     ^^^^^ no rules expected this token in macro call
