tests/trybuild/stages/flush_missing_comma.rs
use brood::system::schedule::stages;

type Stages = stages!{
    flush
    flush
};

fn main() {}
